k8s-related/monitorings/monitor-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prometheus-ingress
  labels:
    app.kubernetes.io/name: prometheus-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  ingressClassName: "nginx"
  tls:
    - hosts:
      - prometheus.piseth.dev
      - grafana.piseth.dev
      secretName: kube-stack-new-tls
  rules:
  - host: prometheus.piseth.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitor-stack-release-kube-prometheus
            port: 
              number: 9090
  - host: grafana.piseth.dev
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: monitor-stack-release-grafana
            port: 
              number: 80
